added ignores, updated config

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 */__pycache__
 */.DS_Store
 .DS_Store
-.ipynb_checkpoints/
-# old_notebooks
 # PyVis generated libraries
 lib/
+
+*.egg-info
+__pycache__
