--- a/config.toml
+++ b/config.toml
@@ -4,14 +4,6 @@ api_key = "ollama"
 max_tokens = 8000
 temperature = 0.2
 
-[data]
-input = """The Industrial Revolution, which began in Great Britain in the late 18th century, was characterized by the transition from manual production methods to machine manufacturing, leading to significant socioeconomic changes including urbanization, the rise of capitalism, and new labor movements. Fueled by ample coal reserves and political stability, Britain became a hub of innovation where inventors and entrepreneurs capitalized on technological advancements to transform industries such as textiles and metallurgy. This shift in production not only boosted output and efficiency but also encouraged the growth of factory systems, where large numbers of workers could gather in central locations to operate machinery under standardized conditions.
-
-One of the most influential developments of this era was the steam engine, improved by the Scottish inventor James Watt, which revolutionized both transportation and manufacturing processes across Europe and North America. Steam-powered locomotives enabled faster movement of goods and people, driving the expansion of rail networks that connected distant regions and promoted commerce on an unprecedented scale. Steamships further extended trade routes worldwide, knitting together global markets and accelerating the exchange of raw materials, finished products, and ideas. Innovations like the spinning jenny, the water frame, and the power loom mechanized textile production, while processes like puddling and rolling redefined ironmaking, laying the groundwork for modern steel production.
-
-As industrialization spread, profound social shifts accompanied the economic boom. The influx of workers from rural areas to urban centers stimulated rapid city growth, often outpacing the development of adequate housing, sanitation, and infrastructure. These transformations sparked new labor movements and demands for fair wages, reasonable working hours, and safer conditions. Child labor became a widespread concern, prompting regulatory reforms in many industrialized nations. Over time, rising literacy rates and broader public awareness empowered various reformers, politicians, and labor activists to push for social change, contributing to important legislation and setting the stage for continued advancements in workers’ rights, public health, and education in the 19th and early 20th centuries.
-"""
-
 [prompts]
 system_prompt = """
 You are an advanced AI system specialized in knowledge extraction and knowledge graph generation.
@@ -21,8 +13,8 @@ Your task: Read the text below (delimited by triple backticks) and identify all 
 
 Follow these rules carefully:
 
-- Atomic Terms: Identify distinct key terms (e.g., objects, locations, organizations, acronyms, people, conditions, concepts). Avoid merging multiple ideas into one term (they should be as “atomistic” as possible).
-- Unified References: Replace any pronouns (e.g., “he,” “she,” “it,” “they,” etc.) with the actual referenced entity, if identifiable.
+- Atomic Terms: Identify distinct key terms (e.g., objects, locations, organizations, acronyms, people, conditions, concepts). Avoid merging multiple ideas into one term (they should be as "atomistic" as possible).
+- Unified References: Replace any pronouns (e.g., "he," "she," "it," "they," etc.) with the actual referenced entity, if identifiable.
 - Pairwise Relationships: If multiple terms co-occur in the same sentence (or a short paragraph that makes them contextually related), create one triple for each pair that has a meaningful relationship.
 - Predicate: Use a short phrase (ideally 1 to 3 words) to describe how the subject relates to the object.
 
