--- a/config.toml
+++ b/config.toml
@@ -1,15 +1,15 @@
 [llm]
-model = "gemma3"
-#model = "claude-3.5-sonnet-v2"
+#model = "gemma3"
+model = "claude-3.5-sonnet-v2"
 #model = "gpt4o"
 api_key = "sk-1234"
-base_url = "http://localhost:11434/v1/chat/completions"
-#base_url = "http://localhost:4000/v1/chat/completions"
-max_tokens = 4096
+#base_url = "http://localhost:11434/v1/chat/completions"
+base_url = "http://localhost:4000/v1/chat/completions"
+max_tokens = 8096
 temperature = 0.8
 
 [chunking]
-chunk_size = 100  # Number of words per chunk
+chunk_size = 500  # Number of words per chunk
 overlap = 20      # Number of words to overlap between chunks
 
 [prompts]
@@ -24,7 +24,10 @@ Follow these rules carefully:
 - Atomic Terms: Identify distinct key terms (e.g., objects, locations, organizations, acronyms, people, conditions, concepts, feelings). Avoid merging multiple ideas into one term (they should be as "atomistic" as possible).
 - Unified References: Replace any pronouns (e.g., "he," "she," "it," "they," etc.) with the actual referenced entity, if identifiable.
 - Pairwise Relationships: If multiple terms co-occur in the same sentence (or a short paragraph that makes them contextually related), create one triple for each pair that has a meaningful relationship.
-- Predicate: Use a short phrase (ideally 1 to 3 words) to describe how the subject relates to the object. Ensure that all possible relationships are identifed in the text and are captured in an S-P-O relation.. 
+- Predicate: Use a short phrase (ideally 1 to 3 words) to describe how the subject relates to the object.
+- Ensure that all possible relationships are identifed in the text and are captured in an S-P-O relation.
+- Attempt to standarize the subjects and objects and maximize the amount of connectedness between the SPO triplets in the text being processes.
+- Make all the text of S-P-O text lower-case, even Names of people and places.  
 
 Output Requirements:
 
