--- a/config.toml
+++ b/config.toml
@@ -9,25 +9,41 @@ max_tokens = 8096
 temperature = 0.8
 
 [chunking]
-chunk_size = 500  # Number of words per chunk
+chunk_size = 100  # Number of words per chunk
 overlap = 20      # Number of words to overlap between chunks
+
+[standardization]
+enabled = true             # Whether to enable entity standardization
+use_llm_for_entities = true  # Whether to use LLM for additional entity resolution
+
+[inference]
+enabled = true             # Whether to enable relationship inference
+use_llm_for_inference = true  # Whether to use LLM for relationship inference
+apply_transitive = true    # Whether to apply transitive inference rules
 
 [prompts]
 system_prompt = """
 You are an advanced AI system specialized in knowledge extraction and knowledge graph generation.
+Your expertise includes identifying consistent entity references and meaningful relationships in text.
 """
 user_prompt = """
 Your task: Read the text below (delimited by triple backticks) and identify all Subject-Predicate-Object (S-P-O) relationships in each sentence. Then produce a single JSON array of objects, each representing one triple.
 
 Follow these rules carefully:
 
+- Entity Consistency: Use consistent names for entities throughout the document. For example, if "John Smith" is mentioned as "John", "Mr. Smith", and "John Smith" in different places, use a single consistent form (preferably the most complete one) in all triples.
 - Atomic Terms: Identify distinct key terms (e.g., objects, locations, organizations, acronyms, people, conditions, concepts, feelings). Avoid merging multiple ideas into one term (they should be as "atomistic" as possible).
 - Unified References: Replace any pronouns (e.g., "he," "she," "it," "they," etc.) with the actual referenced entity, if identifiable.
 - Pairwise Relationships: If multiple terms co-occur in the same sentence (or a short paragraph that makes them contextually related), create one triple for each pair that has a meaningful relationship.
 - Predicate: Use a short phrase (ideally 1 to 3 words) to describe how the subject relates to the object.
-- Ensure that all possible relationships are identifed in the text and are captured in an S-P-O relation.
-- Attempt to standarize the subjects and objects and maximize the amount of connectedness between the SPO triplets in the text being processes.
-- Make all the text of S-P-O text lower-case, even Names of people and places.  
+- Ensure that all possible relationships are identified in the text and are captured in an S-P-O relation.
+- Standardize terminology: If the same concept appears with slight variations (e.g., "artificial intelligence" and "AI"), use the most common or canonical form consistently.
+- Make all the text of S-P-O text lower-case, even Names of people and places.
+
+Important Considerations:
+- Aim for precision in entity naming - use specific forms that distinguish between similar but different entities
+- Maximize connectedness by using identical entity names for the same concepts throughout the document
+- Consider the entire context when identifying entity references
 
 Output Requirements:
 
