--- a/config.toml
+++ b/config.toml
@@ -1,11 +1,13 @@
 [llm]
-model = "gemma3:3b"
+model = "gemma3"
 #model = "claude-3.5-sonnet-v2"
 #model = "gpt4o"
+#model = "llama3-2-90b-instruct-v1:0"
 api_key = "sk-1234"
 base_url = "http://localhost:11434/v1/chat/completions"
 #base_url = "http://localhost:4000/v1/chat/completions"
-max_tokens = 8192
+#max_tokens = 8192
+max_tokens = 4096
 temperature = 0.6
 
 [chunking]
@@ -29,6 +31,7 @@ edge_smooth = false  # Options: false, "dynamic", "continuous", "discrete", "dia
 system_prompt = """
 You are an advanced AI system specialized in knowledge extraction and knowledge graph generation.
 Your expertise includes identifying consistent entity references and meaningful relationships in text.
+CRITICAL INSTRUCTION: All relationships (predicates) MUST be no more than 3 words maximum. Ideally 1-2 words. This is a hard limit.
 """
 user_prompt = """
 Your task: Read the text below (delimited by triple backticks) and identify all Subject-Predicate-Object (S-P-O) relationships in each sentence. Then produce a single JSON array of objects, each representing one triple.
@@ -39,7 +42,7 @@ Follow these rules carefully:
 - Atomic Terms: Identify distinct key terms (e.g., objects, locations, organizations, acronyms, people, conditions, concepts, feelings). Avoid merging multiple ideas into one term (they should be as "atomistic" as possible).
 - Unified References: Replace any pronouns (e.g., "he," "she," "it," "they," etc.) with the actual referenced entity, if identifiable.
 - Pairwise Relationships: If multiple terms co-occur in the same sentence (or a short paragraph that makes them contextually related), create one triple for each pair that has a meaningful relationship.
-- Predicate: Use a very short phrase (ideally 1 to 3 words, but no more that 3 words, abbreviate long words to keep the predicate short) to describe how the subject relates to the object.
+- CRITICAL INSTRUCTION: Predicates MUST be 1-3 words maximum. Never more than 3 words. Keep them extremely concise.
 - Ensure that all possible relationships are identified in the text and are captured in an S-P-O relation.
 - Standardize terminology: If the same concept appears with slight variations (e.g., "artificial intelligence" and "AI"), use the most common or canonical form consistently.
 - Make all the text of S-P-O text lower-case, even Names of people and places.
@@ -49,6 +52,7 @@ Important Considerations:
 - Aim for precision in entity naming - use specific forms that distinguish between similar but different entities
 - Maximize connectedness by using identical entity names for the same concepts throughout the document
 - Consider the entire context when identifying entity references
+- ALL PREDICATES MUST BE 3 WORDS OR FEWER - this is a hard requirement
 
 Output Requirements:
 
@@ -61,12 +65,12 @@ Example of the desired output structure:
 [
   {
     "subject": "Term A",
-    "predicate": "relates to",
+    "predicate": "relates to",  // Notice: only 2 words
     "object": "Term B"
   },
   {
     "subject": "Term C",
-    "predicate": "uses",
+    "predicate": "uses",  // Notice: only 1 word
     "object": "Term D"
   }
 ]
